--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,5 +14,8 @@ RUN cargo build --release --bin server
 
 FROM docker.io/debian:stable-slim AS runtime
 WORKDIR app
+RUN apt-get update --yes && apt-get install --yes fuse3 sqlite3 ca-certificates
+COPY --from=docker.io/flyio/litefs:0.5 /usr/local/bin/litefs /usr/local/bin/litefs
+COPY litefs.yml /etc/litefs.yml
 COPY --from=builder /app/target/release/server /usr/local/bin
-ENTRYPOINT [ "/usr/local/bin/server", "--address=[::]:8080", "--db=/data/flylinks.db" ]
+ENTRYPOINT [ "litefs", "mount" ]
