Rework to do direct backups to S3

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,25 @@
 FROM docker.io/rust:1-slim AS chef 
 RUN cargo install cargo-chef 
-WORKDIR app
 
 FROM chef AS planner
+WORKDIR /flylinks
 COPY . .
 RUN cargo chef prepare  --recipe-path recipe.json
 
 FROM chef AS builder
-COPY --from=planner /app/recipe.json recipe.json
+WORKDIR /flylinks
+COPY --from=planner /flylinks/recipe.json .
 RUN cargo chef cook --release --recipe-path recipe.json
 COPY . .
 RUN cargo build --release --bin server
 
 FROM docker.io/debian:stable-slim AS runtime
-WORKDIR app
-RUN apt-get update --yes && apt-get install --yes fuse3 sqlite3 ca-certificates
-COPY --from=docker.io/flyio/litefs:0.5 /usr/local/bin/litefs /usr/local/bin/litefs
-COPY litefs.yml /etc/litefs.yml
-COPY --from=builder /app/target/release/server /usr/local/bin
-ENTRYPOINT [ "litefs", "mount" ]
+COPY --from=builder /flylinks/target/release/server /flylinks/bin/flylinks-backend
+ENTRYPOINT [                                             \
+    "/app/flylinks-backend",                             \
+    "--s3-bucket=flylinks-us-west-2",                    \
+    "--s3-region=us-west-2",                             \
+    "--s3-path=flylinks.sqlite",                         \
+    "--db-path=/flylinks/data/flylinks.sqlite",          \
+    "--backup-staging-path=/flylinks/data/backup.sqlite" \
+]
