--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,9 +10,13 @@ anyhow = "1.0.79"
 axum = "0.7.3"
 chrono = { version = "0.4.31", features = ["serde", "clock"] }
 clap = { version = "4.4.13", features = ["derive"] }
-rusqlite = { version = "0.30.0", features = ["bundled", "chrono"] }
+dotenv = "0.15.0"
+futures = "0.3.31"
+object_store = { version = "0.11.0", features = ["aws"] }
+rusqlite = { version = "0.30.0", features = ["backup", "bundled", "chrono"] }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
+tempfile = "3.13.0"
 tokio = { version = "1.35.1", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
