--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,26 +1,26 @@
-# fly.toml app configuration file generated for flylinks-backend on 2024-01-06T14:39:14-05:00
+# fly.toml app configuration file generated for flylinks-backend-weathered-pond-9344 on 2024-10-06T13:02:06-04:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "flylinks-backend"
-primary_region = "ewr"
+app = 'flylinks-backend-weathered-pond-9344'
+primary_region = 'ewr'
 
 [build]
+
+[[mounts]]
+  source = 'flylinks_backend_data'
+  destination = '/data'
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
 
 [[vm]]
-  cpu_kind = "shared"
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 1024
-
-[mounts]
-  source="flylinks_backend_data"
-  destination="/data"
